[package]
name = "das_ubershader"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_utils = {git="https://github.com/ericrobolson/GameUtils", branch="main"}
image = "0.23.14"
rayon = "1.5.1"